--- a/distributed/data_parallel.ipynb
+++ b/distributed/data_parallel.ipynb
@@ -16,9 +16,7 @@
     "import torch\n",
     "import torch.nn as nn\n",
     "from torch.utils.data import Dataset, DataLoader\n",
-    "import os\n",
-    "\n",
-    "os.environ['CUDA_VISIBLE_DEVICES'] = '1,2,3,4'"
+    "import os"
    ]
   },
   {
@@ -91,7 +89,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Let's use 4 GPUs!\n"
+      "Let's use 2 GPUs!\n"
      ]
     },
     {
@@ -121,9 +119,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\tIn Model: input size torch.Size([15, 5]) output size torch.Size([15, 2])\n",
+      "\tIn Model: input size torch.Size([15, 5]) output size torch.Size([15, 2])\n",
+      "Outside: input size torch.Size([30, 5]) output_size torch.Size([30, 2])\n",
+      "\tIn Model: input size torch.Size([15, 5]) output size torch.Size([15, 2])\n",
+      "\tIn Model: input size torch.Size([15, 5]) output size torch.Size([15, 2])\n",
+      "Outside: input size torch.Size([30, 5]) output_size torch.Size([30, 2])\n",
+      "\tIn Model: input size torch.Size([15, 5]) output size torch.Size([15, 2])\n",
+      "\tIn Model: input size torch.Size([15, 5]) output size torch.Size([15, 2])\n",
+      "Outside: input size torch.Size([30, 5]) output_size torch.Size([30, 2])\n",
+      "\tIn Model: input size torch.Size([5, 5]) output size torch.Size([5, 2])\n",
+      "\tIn Model: input size torch.Size([5, 5]) output size torch.Size([5, 2])\n",
+      "Outside: input size torch.Size([10, 5]) output_size torch.Size([10, 2])\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
     "for data in rand_loader:\n",
     "    input = data.to(device)\n",
@@ -141,8 +169,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "verl-dev",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
